Fix wrong height on chrome mobile

--- a/docs/index.css
+++ b/docs/index.css
@@ -115,7 +115,7 @@ body, html {
     }
 
     #infobox.expanded {
-        transform: translateY(calc(-100% + 80px));
+        transform: translateY(calc(-100% + 180px));
     }
 
     #locfab.translate {
